# Vultus-Facial-Recognition

./: .gitignore  .gitignore.swp  README.md  main.cpp
Database/: .gitignore  CMakeLists.txt  Error_Handling.md  README.md  test.cpp
Database/src/: Cuatec.cpp  DBManagerInterface.cpp
Database/src/include/: Cuatec.hpp  DBManagerInterface.h  DBManagerInterface.hpp
Database/storage/: dataset.xml
Database/storage/MatFiles/: 10.xml  3.xml  34985.xml
Face_Alignment/: CMakeLists.txt  README.MD
Face_Alignment/src/: main.cpp
Face_Alignment/src/faceAlignment/: align.cpp  align.hpp
Face_Alignment/src/faceDetection/: module1.cpp  module1.hpp
Face_Detection/: CMakeLists.txt  README.MD
Face_Detection/source/: FaceDetection.cpp  FaceDetection.hpp  main.cpp  test.cpp  test2.cpp
Feature_Extraction/: CMakeLists.txt  ReadMe.md  open_container  opencv_dlib.run  run_cmake
Feature_Extraction/source/: FeatureDetection  elbp.hpp  feature_detection.cpp  feature_detection.h  header_files.hpp  main.cpp  network.h
GraphicInterface/: CMakeLists.txt  GUI.cpp  README.md  ReadMe.md  Screens.cpp  Screens.h  avances.md  cvui.h  input.cpp  inputText.h  out
GraphicInterfaceBackup/: CMakeLists.txt  GUI.cpp  Screens.cpp  Screens.h  cvui.h
Verification/: CMakeLists.txt  verification.cpp
_Face_Recognition/: CMakeLists.txt
_Face_Recognition/src/: Face_Recognition.cpp  Face_Recognition.hpp  main.cpp
